kubernetes-manifests/git/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
  annotations:
    external-dns.alpha.kubernetes.io/target: private-ingress.dtlp.cc
spec:
  rules:
    - host: git.dtlp.cc
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo
spec:
  entryPoints:
    - web-secure
  routes:
    - kind: Rule
      match: Host(`git.dtlp.cc`)
      services:
        - name: forgejo
          kind: Service
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: forgejo-ssh
spec:
  entryPoints:
    - ssh
  routes:
    - match: ClientIP(`0.0.0.0/0`)
      services:
        - name: forgejo
          port: 2222
